# multiwallet_call

./: .env.example  .gitignore  Cargo.toml  README.md  test.csv
src/: errors.rs  main.rs  transaction.rs
