[package]
name = "multiwallet_call"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ethers = { version = "2.0.0", features = ["rustls"] }
futures = "0.3.27"
tokio = {version= "1.26.0", features=["full"]}
serde = "1.0.157"
ethers-contract = "2.0.0"
dotenv = "0.15.0"